--- a/index.html
+++ b/index.html
@@ -1006,46 +1006,46 @@ ul{
 		    <ul class="row">
 		      <li class="col-12 col-md-6 col-lg-3">
 		          <div class="cnt-block equal-hight" style="height: 349px;">
-		            <figure><img src="team/anukul.jpg" class="img-responsive" alt="anukul"></figure>
-		            <h3>ANUKUL</h3>
-		            <p>President(IT-GRID)</p>
+		            <figure><img src="images.jpg" class="img-responsive" alt="anukul"></figure>
+		            <h3>Engineer</h3>
+		            <p>President</p>
 		            <ul class="follow-us clearfix">
 		            <li>  <i class="fas fa-mobile-alt"  aria-hidden="true"></i></li>
 		            
-		              <li>9971025994</li>
+		              <li>8585858585</li>
 		            </ul>
 		          </div>
 		      </li>
 		      <li class="col-12 col-md-6 col-lg-3">
 		          <div class="cnt-block equal-hight" style="height: 349px;">
-		            <figure><img src="team/anisha.jpg" class="img-responsive" alt=""></figure>
-		            <h3>ANISHA </h3>
-		            <p>Vice President(IT-GRID)</p>
+		            <figure><img src="images.jpg" class="img-responsive" alt=""></figure>
+		            <h3>Developer </h3>
+		            <p>Vice Presiden</p>
 		            <ul class="follow-us clearfix">
 		                <li>  <i class="fas fa-mobile-alt"  aria-hidden="true"></i></li>
-		                <li>9654444812</li>
+		                <li>8585747496</li>
 		            </ul>
 		          </div>
 		      </li>
 		      <li class="col-12 col-md-6 col-lg-3">
 		          <div class="cnt-block equal-hight" style="height: 349px;">
-		            <figure><img src="team/anju.jpg" class="img-responsive" alt=""></figure>
-		            <h3>ANJU </h3>
-		            <p>Head Coordinator (IT-CLUB)</p>
+		            <figure><img src="images.jpg" class="img-responsive" alt=""></figure>
+		            <h3>SE </h3>
+		            <p>Head Coordinator</p>
 		            <ul class="follow-us clearfix">
 		                <li>  <i class="fas fa-mobile-alt"  aria-hidden="true"></i></li>
-		                <li>9643411768</li>
+		                <li>3232323232</li>
 		            </ul>
 		          </div>
 		       </li>
 		      <li class="col-12 col-md-6 col-lg-3">
 		          <div class="cnt-block equal-hight" style="height: 349px;">
-		            <figure><img src="team/dhiren.jpg" class="img-responsive" alt=""></figure>
-		            <h3>Dhiren</h3>
-		            <p>Vice President (IT-GRID)</p>
+		            <figure><img src="images.jpg" class="img-responsive" alt=""></figure>
+		            <h3>Developer</h3>
+		            <p>Vice President </p>
 		            <ul class="follow-us clearfix">
 		              <li>  <i class="fas fa-mobile-alt"  aria-hidden="true"></i></li>
-		                <li>8851148999</li>
+		                <li>8595857885</li>
 		            </ul>
 		          </div>
 		      </li>
